Remove Languages field

--- a/components/education.html
+++ b/components/education.html
@@ -1,11 +1,11 @@
 <div class="vertical medium_margin">
     <div class="horizontal">
-        <div class="title">$$degree$$</div>
-        <div>$$major$$</div>
+        <div class="title">$$institution$$</div>
+        <div>$$years$$</div>
     </div>
     <div class="horizontal">
-        <div>$$institution$$</div>
-        <div>$$years$$</div>
+        <div>$$degree$$</div>
+        <div>$$major$$</div>
     </div>
     <div>$$gpa$$</div>
 </div>
