Add Apertus experience, minor edits

--- a/marker.css
+++ b/marker.css
@@ -121,10 +121,10 @@
     border-radius: 0.2em 0.7000000000000001em;
     background-image: linear-gradient(
     to right,
-    rgba(197, 222, 242, 0.3),
-    rgba(197, 222, 242, 0.9) 5%,
-    rgba(197, 222, 242, 0.2) 96%,
-    rgba(197, 222, 242, 0.6)
+    rgba(175, 211, 240, 0.3),
+    rgba(175, 211, 240, 0.9) 5%,
+    rgba(175, 211, 240, 0.2) 96%,
+    rgba(175, 211, 240, 0.6)
     );
     clip-path: inset(0 100% 0 0);
     transition: clip-path 0s;
@@ -136,7 +136,7 @@
 @media print {
     .marker2::before {
         background-image: none;
-        background-color: rgba(197, 222, 242, 0.6);
+        background-color: rgba(175, 211, 240, 0.6);
     }
 }
 
@@ -317,10 +317,10 @@
     border-radius: 0.7em 0.20000000000000004em;
     background-image: linear-gradient(
     to right,
-    rgba(197, 222, 242, 0.2),
-    rgba(197, 222, 242, 0.5) 3%,
-    rgba(197, 222, 242, 0.1) 97%,
-    rgba(197, 222, 242, 0.5)
+    rgba(175, 211, 240, 0.2),
+    rgba(175, 211, 240, 0.5) 3%,
+    rgba(175, 211, 240, 0.1) 97%,
+    rgba(175, 211, 240, 0.5)
     );
     clip-path: inset(0 100% 0 0);
     transition: clip-path 0s;
@@ -332,7 +332,7 @@
 @media print {
     .marker6::before {
         background-image: none;
-        background-color: rgba(197, 222, 242, 0.6);
+        background-color: rgba(175, 211, 240, 0.6);
     }
 }
 
@@ -366,10 +366,10 @@
     border-radius: 0.4em 0.7em;
     background-image: linear-gradient(
     to right,
-    rgba(197, 222, 242, 0.2),
-    rgba(197, 222, 242, 0.6) 5%,
-    rgba(197, 222, 242, 0.3) 99%,
-    rgba(197, 222, 242, 0.7)
+    rgba(175, 211, 240, 0.2),
+    rgba(175, 211, 240, 0.6) 5%,
+    rgba(175, 211, 240, 0.3) 99%,
+    rgba(175, 211, 240, 0.7)
     );
     clip-path: inset(0 100% 0 0);
     transition: clip-path 0s;
@@ -381,7 +381,7 @@
 @media print {
     .marker7::before {
         background-image: none;
-        background-color: rgba(197, 222, 242, 0.3);
+        background-color: rgba(175, 211, 240, 0.3);
     }
 }
 
@@ -415,10 +415,10 @@
     border-radius: 0.2em 0.7000000000000001em;
     background-image: linear-gradient(
     to right,
-    rgba(197, 222, 242, 0.1),
-    rgba(197, 222, 242, 0.8) 6%,
-    rgba(197, 222, 242, 0.2) 96%,
-    rgba(197, 222, 242, 0.7)
+    rgba(175, 211, 240, 0.1),
+    rgba(175, 211, 240, 0.8) 6%,
+    rgba(175, 211, 240, 0.2) 96%,
+    rgba(175, 211, 240, 0.7)
     );
     clip-path: inset(0 100% 0 0);
     transition: clip-path 0s;
@@ -430,7 +430,7 @@
 @media print {
     .marker8::before {
         background-image: none;
-        background-color: rgba(197, 222, 242, 0.4);
+        background-color: rgba(175, 211, 240, 0.4);
     }
 }
 
@@ -464,10 +464,10 @@
     border-radius: 0.7em 0.20000000000000004em;
     background-image: linear-gradient(
     to right,
-    rgba(218, 204, 239, 0.2),
-    rgba(218, 204, 239, 0.8) 5%,
-    rgba(218, 204, 239, 0.2) 99%,
-    rgba(218, 204, 239, 0.5)
+    rgba(175, 211, 240, 0.2),
+    rgba(175, 211, 240, 0.8) 5%,
+    rgba(175, 211, 240, 0.2) 99%,
+    rgba(175, 211, 240, 0.5)
     );
     clip-path: inset(0 100% 0 0);
     transition: clip-path 0s;
@@ -479,7 +479,7 @@
 @media print {
     .marker9::before {
         background-image: none;
-        background-color: rgba(218, 204, 239, 0.4);
+        background-color: rgba(175, 211, 240, 0.4);
     }
 }
 
@@ -488,3 +488,101 @@
   transition: clip-path 0.7s ease-in-out;
 }
 /* END OF MARKER marker9 */
+
+/* START OF MARKER marker10 */
+.marker10 {
+    margin: 0;
+    padding: 0;
+    border-radius: 0.6em 0.5em;
+    position: relative;
+    background: transparent;
+    display: inline;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    z-index: 0;
+}
+
+.marker10::before {
+    content: "";
+    position: absolute;
+    inset: -0.1em -0.4em;
+    top: -0.1em;
+    left: -0.4em;
+    right: -0.4em;
+    bottom: -0.1em;
+    border-radius: 0.6em 0.5em;
+    background-image: linear-gradient(
+    to right,
+    rgba(218, 204, 239, 0.2),
+    rgba(218, 204, 239, 0.8) 2%,
+    rgba(218, 204, 239, 0.1) 99%,
+    rgba(218, 204, 239, 0.7)
+    );
+    clip-path: inset(0 100% 0 0);
+    transition: clip-path 0s;
+    z-index: -1;
+    pointer-events: none;
+}
+
+/* Fallback for printing */
+@media print {
+    .marker10::before {
+        background-image: none;
+        background-color: rgba(218, 204, 239, 0.4);
+    }
+}
+
+.marker10.animate-highlight::before {
+  clip-path: inset(0 0 0 0);
+  transition: clip-path 0.7s ease-in-out;
+}
+/* END OF MARKER marker10 */
+
+/* START OF MARKER marker11 */
+.marker11 {
+    margin: 0;
+    padding: 0;
+    border-radius: 0.3em 0.6em;
+    position: relative;
+    background: transparent;
+    display: inline;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    z-index: 0;
+}
+
+.marker11::before {
+    content: "";
+    position: absolute;
+    inset: -0.1em -0.4em;
+    top: -0.1em;
+    left: -0.4em;
+    right: -0.4em;
+    bottom: -0.1em;
+    border-radius: 0.3em 0.6em;
+    background-image: linear-gradient(
+    to right,
+    rgba(218, 204, 239, 0.3),
+    rgba(218, 204, 239, 0.8) 5%,
+    rgba(218, 204, 239, 0.2) 97%,
+    rgba(218, 204, 239, 0.6)
+    );
+    clip-path: inset(0 100% 0 0);
+    transition: clip-path 0s;
+    z-index: -1;
+    pointer-events: none;
+}
+
+/* Fallback for printing */
+@media print {
+    .marker11::before {
+        background-image: none;
+        background-color: rgba(218, 204, 239, 0.4);
+    }
+}
+
+.marker11.animate-highlight::before {
+  clip-path: inset(0 0 0 0);
+  transition: clip-path 0.4s ease-in-out;
+}
+/* END OF MARKER marker11 */
